; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_ftpuploadresume.c_readfunc.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_ftpuploadresume.c_readfunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CURL_READFUNC_ABORT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i8*, i64, i64, i8*)* @readfunc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @readfunc(i8* %0, i64 %1, i64 %2, i8* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i64, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  %12 = load i8*, i8** %9, align 8
  %13 = bitcast i8* %12 to i32*
  store i32* %13, i32** %10, align 8
  %14 = load i32*, i32** %10, align 8
  %15 = call i64 @ferror(i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %4
  %18 = load i64, i64* @CURL_READFUNC_ABORT, align 8
  store i64 %18, i64* %5, align 8
  br label %28

19:                                               ; preds = %4
  %20 = load i8*, i8** %6, align 8
  %21 = load i64, i64* %7, align 8
  %22 = load i64, i64* %8, align 8
  %23 = load i32*, i32** %10, align 8
  %24 = call i64 @fread(i8* %20, i64 %21, i64 %22, i32* %23)
  %25 = load i64, i64* %7, align 8
  %26 = mul i64 %24, %25
  store i64 %26, i64* %11, align 8
  %27 = load i64, i64* %11, align 8
  store i64 %27, i64* %5, align 8
  br label %28

28:                                               ; preds = %19, %17
  %29 = load i64, i64* %5, align 8
  ret i64 %29
}

declare dso_local i64 @ferror(i32*) #1

declare dso_local i64 @fread(i8*, i64, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
